Worked-Plan.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
  <head>
   <title>Worked-Plan</title>
-  <base target="Worked-Plan.html">
+  <base target="index.html">
   <style>
     input[type= button] {
     width: 100px; 
