--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <div class="logo">
             <div>
                 <img src="img/Shape.png" class="img1">
-                <div class="log">STRICT</div>
+                <div class="log">ICT</div>
             </div>
             <div>
                 <img src="img/Image.png" class="img2">
