--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-          <title>Worked-Plan</title>
+          <title>Катя не сумуй</title>
         <base target="index.html">
         <link href="style.css" rel="stylesheet">
     <head/>
     <body>
-         <text>катя</text>
+         <text size="40" color="red>Катя не сумуй, посміхнись, коли ти сумуєш то сумно і мені</text>
 
     </body>
 </html>
