--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
         <link href="style.css" rel="stylesheet">
     <head/>
     <body>
-         <text size="40" color="red">Катя не сумуй, посміхнись, коли ти сумуєш то сумно і мені</text>
-
+         <p><font size="40" color="red">Катя не сумуй, посміхнись, коли ти сумуєш то сумно і мені</font></p>
     </body>
 </html>
 
